--- a/public/index.html
+++ b/public/index.html
@@ -49,4 +49,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <!-- Cloudflare Web Analytics -->
+  <script
+    defer
+    src="https://static.cloudflareinsights.com/beacon.min.js"
+    data-cf-beacon='{"token": "783af590fa81497683e0b58b83534d17"}'
+  ></script>
+  <!-- End Cloudflare Web Analytics -->
 </html>
